Sub plans inheritance fix